Added a universal SPI mechanism for loading extensions.